Bug 118037 - FILEOPEN: Hidden text is displayed at import time
Summary: FILEOPEN: Hidden text is displayed at import time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bibisected, bisected, regression
: 118030 (view as bug list)
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2018-06-06 13:52 UTC by Xisco Faulí
Modified: 2018-06-25 07:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (142.50 KB, application/vnd.ms-powerpoint)
2018-06-06 13:52 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.1 (92.12 KB, image/png)
2018-06-06 13:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-06-06 13:52:51 UTC
Created attachment 142566 [details]
sample document

Steps to reproduce:
1. Open the attached document

-> See the graphic on the slide contains a description on top: 'Average Change in Supine Blood...' which is not displayed on MSO PowerPoint. Same for the logo in the footer, it displays the text 'Das 2 x 1 im bad'. See attached image

Reproduced in

Version: 6.1.0.0.beta1+
Build ID: 8b96445766efe237eb47608ade6c147673466e2e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-06-06 13:53:10 UTC
Created attachment 142567 [details]
comparison MSO 2010 and LibreOffice 6.1
Comment 2 Xisco Faulí 2018-06-06 13:53:58 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 17:58:09 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 21:12:56 +0200
commit b11188835d3b87cd9d2a8cdb3da204cfda5d3e6e (patch)
tree d4c652363b1f20e7399be1fd01d74099e3aa8f3c
parent 40edbce3988946d0ffceb9554de42e1e469edd92 (diff)
DOC import: lazy-read images
At least JPEG files are now only loaded when the user scrolls to the
relevant page.

Also fix the root cause of the EMF lazy-read problem and remove the
previous workarounds.


Bisected with: bibisect-linux64-6.1

Adding Cc: to Miklos Vajna
Comment 3 Commit Notification 2018-06-08 08:21:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11d542352e1088a2c870b0e73e14e10266276483

tdf#118037 PPT import: fix lost crop of graphic

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-06-08 20:58:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aecab50c291a535bc0ccfd30b86060faf6bea994&h=libreoffice-6-1

tdf#118037 PPT import: fix lost crop of graphic

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-06-11 09:35:51 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 3bd8759f5ed0393b2cc5560cab1b5d4052bd9728
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Miklos, thanks for fixing this!!
Comment 6 Xisco Faulí 2018-06-12 13:17:26 UTC
*** Bug 118030 has been marked as a duplicate of this bug. ***