tdf#118037 PPT import: fix lost crop of graphic

Regression from commit b11188835d3b87cd9d2a8cdb3da204cfda5d3e6e (DOC
import: lazy-read images, 2018-04-20).

Change-Id: Ie2155c971d94153352a9372a9795cbb9d820dd40