filter/source/msfilter/msdffimp.cxx
@@ -3719,6 +3719,9 @@ static void lcl_ApplyCropping( const DffPropSet& rPropSet, SfxItemSet* pSet, Gra
         BitmapEx    aCropBitmap;
         sal_uInt32  nTop( 0 ),  nBottom( 0 ), nLeft( 0 ), nRight( 0 );
 
+        // Cropping has to be applied on a loaded graphic.
+        rGraf.makeAvailable();
+
         if ( pSet ) // use crop attributes ?
             aCropSize = lcl_GetPrefSize(rGraf, MapMode(MapUnit::Map100thMM));
         else
